# rvnmetadata

./: .gitlab-ci.yml  CMakeLists.txt  README.md
cmake/: magic-config.cmake  rvnmetadata-config.cmake
include/: metadata-bin.h  metadata-common.h  metadata-file.h  metadata-json.h  metadata-sql.h  metadata.h
src/: metadata-bin.cpp  metadata-common.cpp  metadata-file.cpp  metadata-json.cpp  metadata-sql.cpp  metadata.cpp
test/: CMakeLists.txt  test_helpers.h  test_metadata.cpp  test_version.cpp
test/test_data/json/: good.json  incompatible.json  wrong_type.json
test/test_data/sqlite/: good.sqlite  outdated.sqlite  without_metadata.sqlite  wrong_type.sqlite
